# LIO-Localization

./: .gitattributes  .gitignore  .gitmodules  README.md
.devcontainer/gpu/: devcontainer.json
.devcontainer/no_gpu/: devcontainer.json
docker/: .env  Dockerfile  docker-compose-no-gpu.yml  docker-compose.yml  requirements.txt
scripts/: docker_setup.sh
ws_lio_loc/src/relocalization_bringup/: CMakeLists.txt  README.md  package.xml
ws_lio_loc/src/relocalization_bringup/config/: consolidate_map.yaml  hesaiJT128.yaml  hesaiJT128_driver.yaml  mid360.yaml  mid360_config.json  mid360_fastlio.yaml  mid360_relocalization.yaml  mid360_relocalization_spark.yaml  mid360_spark.yaml  mid360_spark_upstream.yaml  scan_lock.yaml  scan_lock_spark.yaml  waypoint_dropper.yaml
ws_lio_loc/src/relocalization_bringup/launch/: body_frame_default.launch.py  body_frame_g1.launch.py  body_frame_go2.launch.py  body_frame_stick.launch.py  hesaiJT128.launch.py  mapping.launch.py  mapping_spark.launch.py  mapping_spark_upstream.launch.py  mid360.launch.py  relocalization.launch.py  relocalization_spark.launch.py  waypoint_dropper.launch.py
ws_lio_loc/src/relocalization_bringup/relocalization_bringup/: consolidate_map.cpp  waypoint_dropper.cpp
ws_lio_loc/src/relocalization_bringup/resource/: JT128_Firetime_Correction.csv  JT128_default_angle.csv
ws_lio_loc/src/relocalization_bringup/rviz/: waypoint.rviz
