<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>relocalization_bringup</name>
  <version>0.0.0</version>
  <description>Bringup package for relocalization with spark_fast_lio</description>
  <maintainer email="wdc3iii@gmail.com">Will Compton</maintainer>
  <license>MIT</license>

  <exec_depend>spark_fast_lio</exec_depend>
  <exec_depend>scan_lock</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>tf2</depend>
  <build_depend>pcl</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <exec_depend>pcl</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
